2009-03-29  Dominique Dumont  <dominique.dumont@hp.com> 

	* config-edit: added -dump and -load options
	
2009-02-24  Dominique Dumont  <dominique.dumont@hp.com> v0.634

	* config-edit: removed kludgy read_root_dir and write_root_dir
	options. For test, only one root_dir can be specified (like Augeas)

	* lib/Config/Model/ListId.pm: auto_create parameter is replaced by
	auto_create_ids (still trap wrong parameter to avoid memory
	problems)
 
	* lib/Config/Model/HashId.pm: auto_create parameter is replaced by
	auto_create_keys

2009-02-19  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model/ListId.pm (auto_create_elements): Trap wrong
	auto_create argument (avoid massive memory consumption)

2008-12-23  Dominique Dumont  <dominique.dumont@hp.com> v0.633

	* lib/Config/Model/AutoRead.pm : Added -allow_empty parameter so
	starting a configuration from scratch can be allowed by
	configuration model designer. No longer die if 'augeas'
	backend (or any other optional backend) is not found. Just emit a
	warning.

2008-12-16  Dominique Dumont  <dominique.dumont@hp.com> v0.632

	* config-edit: added -backend parameter so (advanced) user can
	specify which read/write backend to use. The actual backed to use
	depends on the model loaded with -model option

2008-11-16  Domi  <domi@bilbo.maison>

	* lib/Config/Model/Instance.pm (write_back): Added backend
	parameter to specify which backend to use to write. By default,
	all backend are tried until one succeeds. This parameter can also
	be specified when calling the constructor

2008-11-10  Dominique Dumont  <dominique.dumont@hp.com> v0.631

	* lib/Config/Model/Value.pm (_pre_fetch): removed dependency on Error

	* lib/Config/Model/WizardHelper.pm : removed dependency on Error

	* lib/Config/Model/AutoRead.pm (auto_write_init): Move Augeas
	read/write feature out of Config::Model. This feature is now
	available in an additional class: Config::Model::Backend::Augeas.